--- a/translations/global+intl-icu.de.xlf
+++ b/translations/global+intl-icu.de.xlf
@@ -2439,5 +2439,17 @@
         <target>Deine Nachricht benötigt einen Titel sowie Inhalt.</target>
       </segment>
     </unit>
+    <unit id="bPdbUF0" name="Gelöst">
+      <segment>
+        <source>Gelöst</source>
+        <target>Gelöst</target>
+      </segment>
+    </unit>
+    <unit id="XG157Qz">
+      <segment>
+        <source>Diese Diskussion ist als gelöst markiert (oder der Anlass hat sich mittlerweile erledigt).</source>
+        <target>Diese Diskussion ist als gelöst markiert (oder der Anlass hat sich mittlerweile erledigt).</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
