--- a/translations/game+intl-icu.fr.xlf
+++ b/translations/game+intl-icu.fr.xlf
@@ -970,7 +970,7 @@
       </notes>
       <segment>
         <source>Gegenstände</source>
-        <target>Objets</target>
+        <target>objets</target>
       </segment>
     </unit>
     <unit id="RmaV9PR" name="Mein Haus ausbauen">
