--- a/translations/global+intl-icu.fr.xlf
+++ b/translations/global+intl-icu.fr.xlf
@@ -3922,7 +3922,7 @@
       </notes>
       <segment>
         <source>Deine Nachricht benötigt einen Titel sowie Inhalt.</source>
-        <target>Deine Nachricht benötigt einen Titel sowie Inhalt.</target>
+        <target>Votre message doit avoir un contenu et un titre.</target>
       </segment>
     </unit>
     <unit id="bPdbUF0" name="Gelöst">
