--- a/translations/game+intl-icu.de.xlf
+++ b/translations/game+intl-icu.de.xlf
@@ -15086,5 +15086,17 @@
         <target>{citizen} hat das Gebäude {plan} repariert (Sklaverei: +50% AP).</target>
       </segment>
     </unit>
+    <unit id="hq.m1hn" name="Ein Moderator hat deinen Thread &quot;{threadname}&quot; geschlossen. {link_post}">
+      <segment>
+        <source>Ein Moderator hat deinen Thread "{threadname}" geschlossen. {link_post}</source>
+        <target>Ein Moderator hat deinen Thread "{threadname}" geschlossen. {link_post}</target>
+      </segment>
+    </unit>
+    <unit id="AEFBcgF">
+      <segment>
+        <source>Ein Moderator hat deinen Thread "{threadname}" als "Gelöst" markiert. {link_post}</source>
+        <target>Ein Moderator hat deinen Thread "{threadname}" als "Gelöst" markiert. {link_post}</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
