--- a/translations/game+intl-icu.de.xlf
+++ b/translations/game+intl-icu.de.xlf
@@ -15098,5 +15098,11 @@
         <target>Ein Moderator hat deinen Thread "{threadname}" als "Gelöst" markiert. {link_post}</target>
       </segment>
     </unit>
+    <unit id="4zy_n9Y" name="Funkgerät verwenden">
+      <segment>
+        <source>Funkgerät verwenden</source>
+        <target>Funkgerät verwenden</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
