--- a/translations/items+intl-icu.es.xlf
+++ b/translations/items+intl-icu.es.xlf
@@ -3580,7 +3580,7 @@
     <unit id="qz1Q.uu" name="Verwenden">
       <notes>
         <note category="german">Verwenden</note>
-        <note category="from">db://ItemAction</note>
+        <note category="from">db://ItemAction;twig:///templates/ajax/game/actions.html.twig</note>
       </notes>
       <segment>
         <source>Verwenden</source>
@@ -9314,6 +9314,36 @@
       <segment>
         <source>Macht Miau</source>
         <target>Hace Miau</target>
+      </segment>
+    </unit>
+    <unit id="F0BaAFm" name="Befiehl {dogname}, deinen Rucksackinhalt in die Stadt zu bringen:">
+      <notes>
+        <note category="german">Befiehl {dogname}, deinen Rucksackinhalt in die Stadt zu bringen:</note>
+        <note category="from">twig:///templates/ajax/game/actions.html.twig</note>
+      </notes>
+      <segment>
+        <source>Befiehl {dogname}, deinen Rucksackinhalt in die Stadt zu bringen:</source>
+        <target>Pedir a {dogname} que lleve el contenido de mi mochila a:</target>
+      </segment>
+    </unit>
+    <unit id="PrYHodM" name="Du kannst ihn auch mit Drogen dopen:">
+      <notes>
+        <note category="german">Du kannst ihn auch mit Drogen dopen:</note>
+        <note category="from">twig:///templates/ajax/game/actions.html.twig</note>
+      </notes>
+      <segment>
+        <source>Du kannst ihn auch mit Drogen dopen:</source>
+        <target>También puedes drogarlo:</target>
+      </segment>
+    </unit>
+    <unit id="QdHhWPJ">
+      <notes>
+        <note category="german">Achtung: Entferne alle Gegenstände aus deinem Rucksack, die du NICHT in die Stadt senden möchtest!</note>
+        <note category="from">twig:///templates/ajax/game/actions.html.twig</note>
+      </notes>
+      <segment>
+        <source>Achtung: Entferne alle Gegenstände aus deinem Rucksack, die du NICHT in die Stadt senden möchtest!</source>
+        <target>Cuidado: ¡Retira de tu mochila los objetos que no deseas que retornen al pueblo!</target>
       </segment>
     </unit>
   </file>
